# wizyelab-web-start

./: README.md  main.py  pyproject.toml
app/: __init__.py
app/api/: __init__.py  router.py
app/api/internal/: __init__.py
app/api/open/: __init__.py
app/components/: __init__.py
app/llm/: __init__.py
app/middleware/: __init__.py  cors.py  logging.py
app/pipeline/: __init__.py
app/utils/: __init__.py  logger.py
config/: __init__.py  config.yaml  settings.py
test/: test_api.py
